# single-statistics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs
src/enrichment/: aucell.rs  mod.rs  utils.rs
src/testing/: mod.rs  utils.rs
src/testing/correction/: mod.rs
src/testing/effect/: mod.rs
src/testing/inference/: discrete.rs  mod.rs  nonparametric.rs  parametric.rs
tests/: integration_tests.rs  unit_tests.rs
