[package]
name = "single-statistics"
version = "0.8.0-beta"
edition = "2024"
license-file = "LICENSE.md"
readme = "README.md"
description = "A specialized Rust library for statistical analysis of single-cell data, part of the single-rust ecosystem."
authors = ["Ian F. Diks"]
repository = "https://github.com/SingleRust/single-statistics"
homepage = "https://singlerust.com"


[dependencies]
anyhow = "1.0.98"
nalgebra-sparse = "0.10.0"
ndarray = {version = "0.16.1", features = ["rayon"]}
num-traits = "0.2.19"
rayon = "1.10.0"
single-utilities = "0.8.0"
statrs = "0.18.0"

[dev-dependencies]
approx = "0.5.1"
